Add future lens, latest talks.

--- a/src/cv.html
+++ b/src/cv.html
@@ -297,6 +297,10 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 </div>
 
 <div class="main pub">
+  Koyena Pal, Jiuding Sun, Andrew Yuan, Byron C. Wallace, and <strong>David Bau</strong>. <a href="https://future.baulab.info/">Future Lens: Anticipating Subsequent Tokens from a Single Hidden State.</a> <em>SIGNLL Conference on Computational Natural Language Learning.</em> <nobr>(CoNLL 2023)</nobr>
+</div>
+
+<div class="main pub">
   Sarah Schwettmann, Tamar Rott Shaham, Joanna Materzy&nacute;ska, Neil Chowdhury, Shuang Li, Jacob Andreas, <strong>David Bau</strong>, and Antonio Torralba. <a href="https://arxiv.org/abs/2309.03886" >A Function Interpretation Benchmark for Evaluating Interpretability Methods</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2023)</nobr>.
 </div>
 
@@ -479,10 +483,11 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
-<div class="main pub"><em>Causal Explanations, Direct Model Editing, and Real-World Impact</em>Invited Talk at the Toyota Technology Insttitute at Chicago, October 2023.</div>
-<div class="main pub"><em>Three Ideas on Interpretbability of Big ML Models</em>Invited Talk at the Machine Learning Department Seminar, Carnegie Mellon University, October 2023.</div>
-<div class="main pub"><em>Big Questions and Terrifying Tea</em>Invited Talk at the MIT CSAIL 20/60 Anniversary Celebration, July 2023.</div>
-<div class="main pub"><em>How Can we Avoid a Decades-Long Delay in Interpretable AI?</em>Talk at the Workshop on Human-Level AI, June 2023.</div>
+<div class="main pub"><em>A Pivotal Moment in Machine Learning</em> Invited Talk at the Harvard AI Safety Offstite, November 2023.</div>
+<div class="main pub"><em>Causal Explanations, Direct Model Editing, and Real-World Impact</em> Invited Talk at the Toyota Technology Insttitute at Chicago, October 2023.</div>
+<div class="main pub"><em>Three Ideas on Interpretbability of Big ML Models</em> Invited Talk at the Machine Learning Department Seminar, Carnegie Mellon University, October 2023.</div>
+<div class="main pub"><em>Big Questions and Terrifying Tea</em> Invited Talk at the MIT CSAIL 20/60 Anniversary Celebration, July 2023.</div>
+<div class="main pub"><em>How Can we Avoid a Decades-Long Delay in Interpretable AI?</em> Talk at the Workshop on Human-Level AI, June 2023.</div>
 <div class="main pub"><em>Locating and Editing the Facts in a Big Network.</em> Invited Talk at the Center for Human-Compatible AI Workshop, Asilomar CA, June 2023.</div>
 <div class="main pub"><em>AI Safety and the Need for National Deep Inference infrastructure.</em> Invited Talk at the MIT/Harvard AI Safety Retreat, March 2023.</div>
 <div class="main pub"><em>The ROME and MEMIT methods.</em> Invited Talk at the Google ML Research Seminar, January 2023.</div>
