--- a/src/publications.html
+++ b/src/publications.html
@@ -166,6 +166,10 @@ figcaption {
 </div>
 
 <div class="main pub">
+  Koyena Pal, Jiuding Sun, Andrew Yuan, Byron C. Wallace, and <strong>David Bau</strong>. <a href="https://future.baulab.info/">Future Lens: Anticipating Subsequent Tokens from a Single Hidden State.</a> <em>SIGNLL Conference on Computational Natural Language Learning.</em> <nobr>(CoNLL 2023)</nobr>
+</div>
+
+<div class="main pub">
   Sarah Schwettmann, Tamar Rott Shaham, Joanna Materzy&nacute;ska, Neil Chowdhury, Shuang Li, Jacob Andreas, <strong>David Bau</strong>, and Antonio Torralba. <a href="https://arxiv.org/abs/2309.03886" >A Function Interpretation Benchmark for Evaluating Interpretability Methods</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2023)</nobr>.
 </div>
 
