--- a/src/index.html
+++ b/src/index.html
@@ -478,6 +478,37 @@ Prof. Arvind Satyanarayan
 
 <input class="collapse" type="checkbox">
 <p>
+<img src="futurelens.png" class="projpic">
+<a href="http://future.baulab.info/">Future Lens: Anticipating Subsequent Tokens from a Single Hidden State.</a>
+ Autoregressive language models like GPT are trained to
+ predict the next word.  But we found they also often thinking
+ several further tokens ahead.  In this work, we measure this
+ future information, and we show how to extend the <a href="">logit lens</a>
+ to reveal a run of future anticipated tokens from individual transformer
+ hidden states.
+<span class="more"></span>
+<span class="extra">
+ Our paper experiments with several ways to decode future tokens from a
+ single hidden state.  Inspired by "tuned lens" methods from
+ <a href="https://arxiv.org/abs/2303.08112">Belrose</a> and
+ <a href="https://arxiv.org/abs/2303.09435">Yom Din</a> that
+ skip to future <em>layers</em>, we first try training a simple
+ linear readout model. We also try transplanting the hidden state
+ into the context of a prompt specially chosen to evoke future output.
+ Using a <a href="https://aclanthology.org/2021.acl-long.353/">tuned prompt</a>
+ reveals that two-ahead tokens can be predicted with more than 48% accuracy,
+ which is good enough to be useful for "future lens" visualizations.
+</span>
+<a href="https://arxiv.org/abs/2311.04897"
+   >K Pal, J Sun, A Yuan, B C Wallace, <span class="me">D Bau</span>.
+   <em>Future Lens: Anticipating Subsequent Tokens
+   from a Single Hidden State</em>
+   SIGNLL Conference on Computational Natural Language Learning (CoNLL 2023).
+   </a>
+</p>
+
+<input class="collapse" type="checkbox">
+<p>
 <img src="fv-thumb.png" class="projpic">
 <a href="http://functions.baulab.info/">Function Vectors in Large Language Models.</a>
   The idea of treating a function reference as data is one of the most powerful
