--- a/src/index.html
+++ b/src/index.html
@@ -479,11 +479,13 @@ Prof. Arvind Satyanarayan
 <input class="collapse" type="checkbox">
 <p>
 <img src="futurelens.png" class="projpic">
-<a href="http://future.baulab.info/">Future Lens: Anticipating Subsequent Tokens from a Single Hidden State.</a>
+<a href="http://future.baulab.info/">Future Lens.</a>
  Autoregressive language models like GPT are trained to
- predict the next word.  But we found they also often thinking
- several further tokens ahead.  In this work, we measure this
- future information, and we show how to extend the <a href="">logit lens</a>
+ predict the next word.  But we found they are also often thinking
+ several further tokens ahead!  In this work, we measure this
+ future information, and we show how to extend the
+ <a href="https://www.lesswrong.com/posts/AcKRB8wDpdaN6v6ru/interpreting-gpt-the-logit-lens"
+   >logit lens</a>
  to reveal a run of future anticipated tokens from individual transformer
  hidden states.
 <span class="more"></span>
@@ -501,8 +503,7 @@ Prof. Arvind Satyanarayan
 </span>
 <a href="https://arxiv.org/abs/2311.04897"
    >K Pal, J Sun, A Yuan, B C Wallace, <span class="me">D Bau</span>.
-   <em>Future Lens: Anticipating Subsequent Tokens
-   from a Single Hidden State</em>
+   <em>Future Lens: Anticipating Subsequent Tokens from a Single Hidden State.</em>
    SIGNLL Conference on Computational Natural Language Learning (CoNLL 2023).
    </a>
 </p>
