Add solar paper.

--- a/src/cv.html
+++ b/src/cv.html
@@ -293,7 +293,7 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
-  Sarah Schwettmann, Tamar Rott Shaham, Joanna Materzy&nacute;ska, Neil Chowdhury, Shuang Li, Jacob Andreas, <strong>David Bau</strong>, and Antonio Torralba. <a href="https://arxiv.org/abs/2309.03886" >A Function Interpretation Benchmark for Evaluating Interpretability Methods</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2023)</nobr>.
+  Sarah Schwettmann, Tamar Rott Shaham, Joanna Materzy&nacute;ska, Neil Chowdhury, Shuang Li, Jacob Andreas, <strong>David Bau</strong>, and Antonio Torralba. <a href="https://arxiv.org/abs/2309.03886" >A Function Interpretation Benchmark for Evaluating Interpretability Methods.</a> <em>Advances in Neural Information Processing Systems 36.</em> <nobr>(NeurIPS 2023)</nobr>.
 </div>
 
 <div class="main pub">
@@ -396,6 +396,10 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 
 
 <h3 class="main">Workshop papers</h3>
+
+<div class="main pub">
+Silen Naihin, David Atkinson, Marc Green, Merwane Hamadi, Craig Swift, Douglas Schonholtz, Adam Tauman Kalai, <strong>David Bau</strong>.  <a href="https://arxiv.org/abs/2311.10538">Testing Language Model Agents Safely in the Wild.</a>  <em>Socially Responsible Language Modelling Research workshop at NeurIPS</em> (SoLaR 2023).
+</div>
 
 <div class="main pub">
 Xander Davies, Max Nadeau, Nikhil Prakash, Tamar Rott Shaham, <strong>David Bau</strong>. <a href="https://arxiv.org/abs/2307.03637">Discovering Variable Binding Circuitry with Desiderata.</a> <em>Workshop on Challenges in Deployable Generative AI</em> <nobr>(ICML 2023 Workshop)</nobr>
