--- a/src/index.html
+++ b/src/index.html
@@ -547,7 +547,7 @@ Prof. Arvind Satyanarayan
 <img src="unified.png" class="projpic">
 <a href="http://unified.baulab.info/">Unified Concept Editing in Diffusion Models.</a>
   Text-to-image diffusion models such as Stable Diffusion have many issues
-  that limit their sutiability for real-world deployment: they amplify racial and
+  that limit their suitability for real-world deployment: they amplify racial and
   gender biases; they imitate copyrighted images; and they generate offensive content.
   We introduce a method, Unified Concept Editing, that allows precise editing of many
   concepts within a diffusion model, and we show that it can be used to reduce bias,
