--- a/src/index.html
+++ b/src/index.html
@@ -283,7 +283,7 @@ My office at MIT:
 <h2 class="mt-4 mb-3">Lab Members</h2>
 <input class="collapse" type="checkbox">
 <p class="people">
-<a href="https://github.com/davatk">
+<a href="https://github.com/diatkinson">
 <img src="people/davidatkinson.jpg">
 David Atkinson
 </a>
