Separate video playback page for SEO.

--- a/src/index.html
+++ b/src/index.html
@@ -229,6 +229,7 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <!--<iframe id="selfpic-video" width="448" height="252"
 src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=http://baulab.info/"
 frameborder="0" allow="accelerometer;encrypted-media;gyroscope;picture-in-picture" allowfullscreen></iframe>-->
+<!--
 <video controls width="448" height="252" poster="video-poster.png" preload="metadata"
   class="selfpic">
 <source src="understanding-video-compact.mp4" type="video/mp4" />
@@ -236,7 +237,11 @@ frameborder="0" allow="accelerometer;encrypted-media;gyroscope;picture-in-pictur
  src="understanding-video-english.vtt" />
 </video>
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
+-->
+<a href="/video.html"><img width="448" height="252" src="video-poster.png" class="selfpic"></a>
+<figcaption>A brief interview with David: why we study deep network internals.</figcaption>
 </figure>
+
 <p>
 I am an Assistant Professor of Computer Science at <a
 href="https://www.khoury.northeastern.edu/research/research-areas/"
