--- a/src/index.html
+++ b/src/index.html
@@ -292,7 +292,7 @@ My office at MIT:
 <img src="people/davidatkinson.jpg">
 David Atkinson
 </a>
-<a href="https://www.linkedin.com/in/sheridan-feucht/">
+<a href="https://sfeucht.github.io/">
 <img src="people/sheridan.jpg">
 Sheridan Feucht
 </a>
