--- a/src/publications.html
+++ b/src/publications.html
@@ -162,6 +162,30 @@ figcaption {
 <h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
+  Evan Hernandez, Arnab Sen Sharma, Tal Haklay, Kevin Meng,
+  Martin Wattenberg, Jacob Andreas, Yonatan Belinkov <strong>David Bau</strong>.
+  <a href="https://lre.baulab.info/"
+    >Linearity of Relation Decoding in Transformer Language Models.</a>
+  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <nobr>(ICLR 2024 spotlight)</nobr>
+</div>
+
+<div class="main pub">
+  Eric Todd, Millicent Li, Arnab Sen Sharma, Aaron Mueller, Byron C Wallace,
+  <strong>David Bau</strong>.
+  <a href="https://functions.baulab.info/">Function Vectors in Large Language Models.</a>
+  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <nobr>(ICLR 2024)</nobr>
+</div>
+
+<div class="main pub">
+  Nikhil Prakash, Tamar Rott Shaham, Tal Haklay, Yonatan Belinkov, <strong>David Bau</strong>.
+  <a href="">Fine-Tuning Enhances Existing Mechanisms: A Case Study on Entity Tracking.</a>
+  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <nobr>(ICLR 2024)</nobr>
+</div>
+
+<div class="main pub">
   Rohit Gandikota, Hadas Orgad, Yonatan Belinkov, Joanna Materzy&nacute;ska, <strong>David Bau</strong>. <a href="https://unified.baulab.info/">Unified Concept Editing in Diffusion Models.</a> <em>Proceedings of the 2024 IEEE/CVF Winter Conference on Applications of Computer Vision.</em> <nobr>(WACV 2024)</nobr>
 </div>
 
