Workshop paper too.

--- a/src/publications.html
+++ b/src/publications.html
@@ -318,7 +318,20 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 <h3 class="main">Workshop Papers</h3>
 
 <div class="main pub">
-Silen Naihin, David Atkinson, Marc Green, Merwane Hamadi, Craig Swift, Douglas Schonholtz, Adam Tauman Kalai, <strong>David Bau</strong>.  <a href="https://arxiv.org/abs/2311.10538">Testing Language Model Agents Safely in the Wild.</a>  <em>Socially Responsible Language Modelling Research workshop at NeurIPS</em> (SoLaR 2023).
+  Nicholas Vincent, <strong>David Bau</strong>, Sarah Schwettmann, Joshua Tan.
+  <a href="https://arxiv.org/abs/2311.11350"
+     >An Alternative to Regulation: The Case for Public AI.</a>
+  <em>Socially Responsible Language Modelling Research workshop at NeurIPS</em>
+  <nobr>(RegML 2023, NeurIPS 2023 Workshop)</nobr>.
+</div>
+
+<div class="main pub">
+  Silen Naihin, David Atkinson, Marc Green, Merwane Hamadi, Craig Swift, Douglas Schonholtz,
+  Adam Tauman Kalai, <strong>David Bau</strong>.
+  <a href="https://arxiv.org/abs/2311.10538"
+    >Testing Language Model Agents Safely in the Wild.</a>
+  <em>Socially Responsible Language Modelling Research workshop at NeurIPS</em>
+  <nobr>(SoLaR 2023, NeurIPS 2023 Workshop)</nobr>.
 </div>
 
 <div class="main pub">
