--- a/src/cv.html
+++ b/src/cv.html
@@ -430,6 +430,14 @@ Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
 <h3 class="main">Workshop papers</h3>
 
 <div class="main pub">
+  Nicholas Vincent, <strong>David Bau</strong>, Sarah Schwettmann, Joshua Tan.
+  <a href="https://arxiv.org/abs/2311.11350"
+     >An Alternative to Regulation: The Case for Public AI.</a>
+  <em>Socially Responsible Language Modelling Research workshop at NeurIPS</em>
+  <nobr>(RegML 2023, NeurIPS 2023 Workshop)</nobr>.
+</div>
+
+<div class="main pub">
 Silen Naihin, David Atkinson, Marc Green, Merwane Hamadi, Craig Swift, Douglas Schonholtz, Adam Tauman Kalai, <strong>David Bau</strong>.  <a href="https://arxiv.org/abs/2311.10538">Testing Language Model Agents Safely in the Wild.</a>  <em>Socially Responsible Language Modelling Research workshop at NeurIPS</em> (SoLaR 2023).
 </div>
 
