--- a/src/video.html
+++ b/src/video.html
@@ -237,9 +237,9 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 </figure>
 <p>
 When we study artificial neural networks, we have the luxury of looking at
-everything that is going on.  This presents us with a new empirical
-opportunity to tackle the grand and fundamental research problem of
-understanding how cognition is organized.
+everything that is going on.  This presents us with a new opportunity
+to tackle the grand and fundamental research problem of
+understanding how cognition works.
 </p>
 <p>
 <!--Developing an understanding the rich internal structure of deep networks is a
