--- a/src/publications.html
+++ b/src/publications.html
@@ -166,7 +166,7 @@ figcaption {
   Martin Wattenberg, Jacob Andreas, Yonatan Belinkov <strong>David Bau</strong>.
   <a href="https://lre.baulab.info/"
     >Linearity of Relation Decoding in Transformer Language Models.</a>
-  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
   <nobr>(ICLR 2024 spotlight)</nobr>
 </div>
 
@@ -174,14 +174,14 @@ figcaption {
   Eric Todd, Millicent Li, Arnab Sen Sharma, Aaron Mueller, Byron C Wallace,
   <strong>David Bau</strong>.
   <a href="https://functions.baulab.info/">Function Vectors in Large Language Models.</a>
-  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
   <nobr>(ICLR 2024)</nobr>
 </div>
 
 <div class="main pub">
   Nikhil Prakash, Tamar Rott Shaham, Tal Haklay, Yonatan Belinkov, <strong>David Bau</strong>.
   <a href="">Fine-Tuning Enhances Existing Mechanisms: A Case Study on Entity Tracking.</a>
-  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
   <nobr>(ICLR 2024)</nobr>
 </div>
 
