--- a/src/cv.html
+++ b/src/cv.html
@@ -297,7 +297,7 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
   Martin Wattenberg, Jacob Andreas, Yonatan Belinkov <strong>David Bau</strong>.
   <a href="https://lre.baulab.info/"
     >Linearity of Relation Decoding in Transformer Language Models.</a>
-  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
   <nobr>(ICLR 2024 spotlight)</nobr>
 </div>
 
@@ -305,14 +305,14 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
   Eric Todd, Millicent Li, Arnab Sen Sharma, Aaron Mueller, Byron C Wallace,
   <strong>David Bau</strong>.
   <a href="https://functions.baulab.info/">Function Vectors in Large Language Models.</a>
-  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
   <nobr>(ICLR 2024)</nobr>
 </div>
 
 <div class="main pub">
   Nikhil Prakash, Tamar Rott Shaham, Tal Haklay, Yonatan Belinkov, <strong>David Bau</strong>.
   <a href="">Fine-Tuning Enhances Existing Mechanisms: A Case Study on Entity Tracking.</a>
-  <em>Proceedings of the 2024 International Conference on Learning Representations</em>
+  <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
   <nobr>(ICLR 2024)</nobr>
 </div>
 
