--- a/src/cv.html
+++ b/src/cv.html
@@ -154,7 +154,7 @@ A.B. in Mathematics
 
 <div class="index">2022-current</div>
 <div class="main item">
-<strong>Assistant Professor.</strong> Northeastern Khoury College of Computer Science.
+<strong>Assistant Professor.</strong> Northeastern University Khoury College of Computer Sciences.
 </div>
 
 <div class="index">2021-2022</div>
