Update papers and talks.

--- a/src/cv.html
+++ b/src/cv.html
@@ -519,6 +519,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Direct Model Editing and Large Model Interpretability</em> Invited Talk at UC Berkeley CS 294-267, Understanding Large Language Models, November 2023.</div>
 <div class="main pub"><em>A Pivotal Moment in Machine Learning</em> Invited Talk at the Harvard AI Safety Offstite, November 2023.</div>
 <div class="main pub"><em>Causal Explanations, Direct Model Editing, and Real-World Impact</em> Invited Talk at the Toyota Technology Insttitute at Chicago, October 2023.</div>
 <div class="main pub"><em>Three Ideas on Interpretbability of Big ML Models</em> Invited Talk at the Machine Learning Department Seminar, Carnegie Mellon University, October 2023.</div>
