--- a/src/index.html
+++ b/src/index.html
@@ -509,7 +509,7 @@ Prof. Arvind Satyanarayan
 <a href="https://arxiv.org/abs/2311.04897"
    >K Pal, J Sun, A Yuan, B C Wallace, <span class="me">D Bau</span>.
    <em>Future Lens: Anticipating Subsequent Tokens from a Single Hidden State.</em>
-   SIGNLL Conference on Computational Natural Language Learning (CoNLL 2023).
+   CoNLL 2023.
    </a>
 </p>
 
@@ -544,7 +544,8 @@ Prof. Arvind Satyanarayan
 </span>
 <a href="https://arxiv.org/abs/2310.15213"
    >E Todd, M L Li, A Sen Sharma, A Mueller, B C Wallace, <span class="me">D Bau</span>.
-   <em>Function Vectors in Large Language Models.</em> 2023. arXiv preprint arXiv:2310:15213.</a>
+   <em>Function Vectors in Large Language Models.</em>
+   <nobr>ICLR 2024.</nobr></a>
 </p>
 
 <input class="collapse" type="checkbox">
