Add links and cities.

--- a/src/cv.html
+++ b/src/cv.html
@@ -519,20 +519,20 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
-<div class="main pub"><em>Direct Model Editing and Large Model Interpretability</em> Invited Talk at UC Berkeley CS 294-267, Understanding Large Language Models, November 2023.</div>
-<div class="main pub"><em>A Pivotal Moment in Machine Learning</em> Invited Talk at the Harvard AI Safety Offstite, November 2023.</div>
-<div class="main pub"><em>Causal Explanations, Direct Model Editing, and Real-World Impact</em> Invited Talk at the Toyota Technology Insttitute at Chicago, October 2023.</div>
-<div class="main pub"><em>Three Ideas on Interpretbability of Big ML Models</em> Invited Talk at the Machine Learning Department Seminar, Carnegie Mellon University, October 2023.</div>
-<div class="main pub"><em>Big Questions and Terrifying Tea</em> Invited Talk at the MIT CSAIL 20/60 Anniversary Celebration, July 2023.</div>
-<div class="main pub"><em>How Can we Avoid a Decades-Long Delay in Interpretable AI?</em> Talk at the Workshop on Human-Level AI, June 2023.</div>
-<div class="main pub"><em>Locating and Editing the Facts in a Big Network.</em> Invited Talk at the Center for Human-Compatible AI Workshop, Asilomar CA, June 2023.</div>
-<div class="main pub"><em>AI Safety and the Need for National Deep Inference infrastructure.</em> Invited Talk at the MIT/Harvard AI Safety Retreat, March 2023.</div>
-<div class="main pub"><em>The ROME and MEMIT methods.</em> Invited Talk at the Google ML Research Seminar, January 2023.</div>
-<div class="main pub"><em>AI Alignment, Model Interpretation, and Direct Model Editing.</em> Invited Talk at the Harvard AI Alignment Team, January 2023.</div>
+<div class="main pub"><em>Direct Model Editing and Large Model Interpretability.</em> Invited Talk at UC Berkeley CS 294-267, Understanding Large Language Models. Berkeley, CA. November 2023.</div>
+<div class="main pub"><em>A Pivotal Moment in Machine Learning.</em> Invited Talk at the Harvard AI Safety Offstite. Essex, MA. November 2023.</div>
+<div class="main pub"><em>Causal Explanations, Direct Model Editing, and Real-World Impact.</em> Invited Talk at the Toyota Technology Institute at Chicago. Chicago, IL. October 2023.</div>
+<div class="main pub"><em>Three Ideas on Interpretbability of Big ML Models.</em> Invited Talk at the Machine Learning Department Seminar, Carnegie Mellon University. Pittsburgh, PA. October 2023.</div>
+<div class="main pub"><em><a href="https://www.youtube.com/watch?v=2L3wRwSseqc">Big Questions and Terrifying Tea</a>.</em> Invited Talk at the MIT CSAIL 20/60 Anniversary Celebration. Cambridge, MA. July 2023.</div>
+<div class="main pub"><em>How Can we Avoid a Decades-Long Delay in Interpretable AI?</em> Talk at the Workshop on Human-Level AI. Waltham, MA. June 2023.</div>
+<div class="main pub"><em>Locating and Editing the Facts in a Big Network.</em> Invited Talk at the Center for Human-Compatible AI Workshop. Asilomar, CA. June 2023.</div>
+<div class="main pub"><em>AI Safety and the Need for National Deep Inference infrastructure.</em> Invited Talk at the MIT/Harvard AI Safety Retreat. Essex, MA. March 2023.</div>
+<div class="main pub"><em>The ROME and MEMIT methods.</em> Invited Talk at the Google ML Research Seminar. Mountain View, CA. January 2023.</div>
+<div class="main pub"><em>AI Alignment, Model Interpretation, and Direct Model Editing.</em> Invited Talk at the Harvard AI Alignment Team. Cambridge MA. January 2023.</div>
 <div class="main pub"><em>The ROME method and Direct Model Editing.</em> Invited Talk at the AstraZenica ML Research Seminar, January 2023.</div>
-<div class="main pub"><em>Machine Learning Interpretability and Direct Model Editing.</em> Invited Talk at the MIT ML Interpretability Seminar, January 2023.</div>
-<div class="main pub"><em>Direct Model Editing and Mechanistic Interpretability.</em> Keynote for BlackboxNLP, at EMNLP December 2022 .</div>
-<div class="main pub"><em>Direct Model Editing to Understand Model Knowledge.</em> Keynote for Machine Learning Safety Workshop, at NeurIPS December 2022 .</div>
+<div class="main pub"><em>Machine Learning Interpretability and Direct Model Editing.</em> Invited Talk at the MIT ML Interpretability Seminar. Cambridge, MA. January 2023.</div>
+<div class="main pub"><em><a href="https://www.youtube.com/watch?v=I1ELSZNFeHc">Direct Model Editing and Mechanistic Interpretability</a>.</em> Keynote for BlackboxNLP, at EMNLP December 2022 .</div>
+<div class="main pub"><em>Direct Model Editing to Understand Model Knowledge.</em> Keynote for Machine Learning Safety Workshop, at NeurIPS.  New Orleans, LA. December 2022.</div>
 <div class="main pub"><em>Causal Tracing in Vision and Language Models.</em> Machine Learning Interpretability Research Group, University of California Berkeley, November 2022 .</div>
 <div class="main pub"><em>Tracing and Editing Large Models.</em> Keynote for Workshop on Trustworthy Machine Learning, UOM Sri Lanka, July 2022.</div>
 <div class="main pub"><em>Direct Model Editing.</em> Keynote for AI for Content Creation Workshop at CVPR June 2022.</div>
@@ -543,6 +543,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 <div class="main pub"><em>Mathematical Puzzles in Intepretable Deep Learning.</em> Computational Maths and Applications Seminar, University of Oxford.  October 2021.</div>
 <div class="main pub"><em>Opening Up AI For Human Insight and Creativity.</em> Keynote for Workshop on Measurements of Machine Creativity, at CVPR June 2021.</div>
 <div class="main pub"><em>Cracking Open AI for New Insights.</em> Keynote for Workshop on Analysis and Modeling of Faces, at CVPR June 2021.</div>
+<div class="main pub"><em><a href="https://www.youtube.com/watch?v=aLEbcZiTCWM">Painting with the Neurons of a GAN</a>.</em> Invited lecture at MIT 6.S192: Deep Learning for Art. Cambridge, MA. January 2021.</div>
 <div class="main pub"><em>Analyzing the Role of Neurons in an Artificial Neural Network.</em> Kanwisher Lab Meeting, MIT Dept of Brain and Cognitive Sciences.  Cambridge, MA. September 2020.</div>
 <div class="main pub"><em>Cracking Open the Black Box.</em> MIT-IBM Seminar Series.  Cambridge, MA. September 2020.</div>
 <div class="main pub"><em>Human Agency and Network Rules: Rewriting a Generative Network.</em> Google Magenta Group Meeting.  Mountain View, CA. September 2020.</div>
@@ -556,7 +557,7 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 <div class="main pub"><em>Dissecting the Semantic Structure of Deep Networks for Vision.</em>  Explainable AI for Vision Workshop.  Seoul, Korea.  November 2019. </div>
 <div class="main pub"><em>Dissecting and Manipulating Generative Adversarial Networks.</em> Image Synthesis Workshop.  Seoul, Korea.  October 2019.</div>
 <div class="main pub"><em>Exploring a Generator with GANDissect.</em>  GANocracy Workshop. Cambridge, MA.  May 2019.</div>
-<div class="main pub"><em>Understanding the Internal Structure of a GAN.</em>  Re-Work Deep Learing Summit.  Boston, MA.  May 2019.</div>
+<div class="main pub"><em><a href="https://www.youtube.com/watch?v=60bRsyJBnVY">Understanding the Internal Structure of a GAN</a>.</em>  Re-Work Deep Learing Summit.  Boston, MA.  May 2019.</div>
 <div class="main pub"><em>Dissecting Artificial Neural Networks for Vision.</em>  Martinos Center for Biomedical Imaging.  Boston, MA.  April 2019.</div>
 <div class="main pub"><em>Semantic Paint using a Generative Adversarial Network.</em>  Samsung/MIT Design Workshop.  Cambridge, MA.  April 2019.</div>
 <div class="main pub"><em>Dissecting What a Generative Network Can Learn Unsupervised.</em>  DARPA XAI PI Meeting.  Berkeley, CA.  February 2019.</div>
