--- a/src/cv.html
+++ b/src/cv.html
@@ -311,7 +311,7 @@ Grace W. Lindsay and <strong>David Bau</strong>. <a href="https://www.sciencedir
 
 <div class="main pub">
   Nikhil Prakash, Tamar Rott Shaham, Tal Haklay, Yonatan Belinkov, <strong>David Bau</strong>.
-  <a href="">Fine-Tuning Enhances Existing Mechanisms: A Case Study on Entity Tracking.</a>
+  <a href="https://finetuning.baulab.info/">Fine-Tuning Enhances Existing Mechanisms: A Case Study on Entity Tracking.</a>
   <em>Proceedings of the 2024 International Conference on Learning Representations.</em>
   <nobr>(ICLR 2024)</nobr>
 </div>
@@ -442,7 +442,7 @@ Silen Naihin, David Atkinson, Marc Green, Merwane Hamadi, Craig Swift, Douglas S
 </div>
 
 <div class="main pub">
-Xander Davies, Max Nadeau, Nikhil Prakash, Tamar Rott Shaham, <strong>David Bau</strong>. <a href="https://arxiv.org/abs/2307.03637">Discovering Variable Binding Circuitry with Desiderata.</a> <em>Workshop on Challenges in Deployable Generative AI</em> <nobr>(ICML 2023 Workshop)</nobr>
+Xander Davies, Max Nadeau, Nikhil Prakash, Tamar Rott Shaham, <strong>David Bau</strong>. <a href="https://das.baulab.info/">Discovering Variable Binding Circuitry with Desiderata.</a> <em>Workshop on Challenges in Deployable Generative AI</em> <nobr>(ICML 2023 Workshop)</nobr>
 </div>
 <div class="main pub">
 <strong>David Bau</strong>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, Antonio Torralba
