--- a/src/index.html
+++ b/src/index.html
@@ -507,7 +507,7 @@ Prof. Arvind Satyanarayan
  and we find that the encodings are compatible, not only allowing
  interchange, but also revealing that improved task performance
  can be obtained when fine-tuned model activations are patched
- directly into the original model.
+ directly between models.
 </span>
 <a href="https://arxiv.org/abs/2311.04897"
    >N Prakash, T R Shaham, T Haklay, Y Belinkov, <span class="me">D Bau</span>.
