--- a/src/index.html
+++ b/src/index.html
@@ -506,10 +506,9 @@ Prof. Arvind Satyanarayan
  test whether the encoding of information is changed after fine-tuning,
  and we find that the encodings are compatible, not only allowing
  interchange, but also revealing that improved task performance
- can be obtained when fine-tuned model activations are patched
- directly between models.
+ can be obtained by directly patching model activations between models.
 </span>
-<a href="https://arxiv.org/abs/2311.04897"
+<a href="https://arxiv.org/abs/2402.14811"
    >N Prakash, T R Shaham, T Haklay, Y Belinkov, <span class="me">D Bau</span>.
    <em>Fine-Tuning Enhances Existing Mechanisms: A Case Study on Entity Tracking.</em>
    <nobr>ICLR 2024.</nobr></a>
