Add links for old papers.

--- a/src/publications.html
+++ b/src/publications.html
@@ -288,7 +288,7 @@ Bolei Zhou, Yiyou Sun, <strong>David Bau</strong>, and Antonio Torralba. <a href
 
 <div class="main pub">
 Ming Zhao, Jay Yagnik, Hartwig Adam, <strong>David Bau</strong>.
-<a href="">Large Scale Learning and Recognition of Faces in Web Videos</a>. <em>8th IEEE International Conference on Automatic Face and Gesture Recognition.</em>  <nobr>(FG 2008)</nobr></div>
+<a href="https://ieeexplore.ieee.org/abstract/document/4813381">Large Scale Learning and Recognition of Faces in Web Videos</a>. <em>8th IEEE International Conference on Automatic Face and Gesture Recognition.</em>  <nobr>(FG 2008)</nobr></div>
 
 <div class="main pub">
 <strong>David Bau</strong>, Induprakas Kodukula, Vladimir Kotlyar, Keshav Pingali, Paul Stodghill.
