--- a/src/cv.html
+++ b/src/cv.html
@@ -519,6 +519,8 @@ US&nbsp;Patent&nbsp;6859810. (2001)</div>
 
 <h2 class="main">Invited Talks</h2>
 
+<div class="main pub"><em>Unlearning.</em> <a href="https://dc-workshop.genlaw.org/">GenLaw DC Workshop</a>. Washington, DC. April 2024.</div>
+<div class="main pub"><em>Breaking Open the Black Box of AI.</em> <a href="https://northeastern.instructure.com/courses/184974/pages/ai-in-action-applied-ai-innovation-across-industries-breaking-the-ml-black-box">AI in Action</a>, Northeastern University, Boston, MA. April 2024.</div>
 <div class="main pub"><em>A pragmatic approach to open standards for AI.</em> AI Safety Institute, Department for Science, Innovation and Technology, London, UK. March 2024.</div>
 <div class="main pub"><em>Flying Blind: making models we do not understand and what to do instead.</em> Invited Talk at the Harvard AI Safety Offstite. Essex, MA. March 2024.</div>
 <div class="main pub"><em>Direct Model Editing and Large Model Interpretability.</em> Invited Talk at UC Berkeley CS 294-267, Understanding Large Language Models. Berkeley, CA. November 2023.</div>
