--- a/src/video.html
+++ b/src/video.html
@@ -258,6 +258,9 @@ Want to come to Boston to work on deep learning with me?
 student or postdoc.
 </p>
 <p>
+Find <a href="https://www.google.com/search?q=%22david+bau%22+ai&tbm=vid">other video talks and interviews with David here</a>.
+</p>
+<p>
 <a href="/">Back to the main page to read more about our research</a>
 </div>
 
