--- a/src/index.html
+++ b/src/index.html
@@ -488,7 +488,7 @@ Prof. Arvind Satyanarayan
  When you fine-tune an LLM, are you teaching it something new or
  exposing what it already knows?  In this work, we pin down the detailed
  structure of the mechanisms for an entity-tracking task using new
- patching techniques, revealing a pre-existing circuit when a the
+ patching techniques, revealing a pre-existing circuit when a
  capability emerges from fine-tuning.
 <span class="more"></span>
 <span class="extra">
