--- a/src/index.html
+++ b/src/index.html
@@ -485,10 +485,13 @@ Prof. Arvind Satyanarayan
 <p>
 <img src="lre.png" class="projpic">
 <a href="http://lre.baulab.info/">Linearity of Relation Decoding in Transformer LMs</a>
- What is the right level of abstraction to use when understanding a huge network?  In this work,
- we ask how <em>relationships</em> between entities and their attributes are represented,
- and we measure power of the <em>Jacobian</em>&emdash;the matrix derivative&emdash;
- to capture the action of a range of layers in applying a relation to an entity.
+ What is the right level of abstraction to use when understanding a huge network?
+ While it is natural to examine individual neurons, attention heads, modules, and
+ representation vectors, we should also ask whether taking a holistic view of
+ a larger part of the network can reveal any higher-level structure. In this work,
+ we ask how relationships between entities and their attributes are represented,
+ and we measure power of the <em>Jacobian</em>&mdash;the matrix derivative&mdash;to
+ capture the action of a range of transformer layers in applying a relation to an entity.
 <span class="more"></span>
 <span class="extra">
  When a representation vector passes through a range of transformer layers, it
@@ -496,16 +499,18 @@ Prof. Arvind Satyanarayan
  when the network resolves a specific relationship such as
  <em>person X plays instrument Y</em>, the action of the transformer from the vector
  for X to the vector for Y will often be essentially linear, suggesting
- that the information about Y is already present in X. We analyze more than 40
- different relations to determine which have a linear representation, and we introduce
- a tool, the <em>attribute lens</em> that can be used to visualize the relational
- information carried by an entity.
+ that the information about Y is already present in X. Moreover the linear operator
+ can be extracted by examining the Jacobian using as few as a single example of
+ the relation.  We analyze more than 40 different relations to determine which
+ have a linear representation, and we introduce a tool, the <em>attribute lens</em>
+ that exploits linearity to visualize the relational information carried in a
+ state vector.
 </span>
 <a href="https://arxiv.org/abs/2308.09124"
    >E Hernandez, A Sen Sharma, T Haklay, K Meng, M Wattenberg, J Andreas, Y Belinkov,
    <span class="me">D Bau</span>.
    <em>Linearity of Relation Decoding in Transformer Language Models.</em>
-   <nobr>ICLR 2024.</nobr></a>
+   <nobr>ICLR 2024 (spotlight).</nobr></a>
 </p>
 
 <input class="collapse" type="checkbox">
