--- a/src/index.html
+++ b/src/index.html
@@ -484,7 +484,7 @@ Prof. Arvind Satyanarayan
 <input class="collapse" type="checkbox">
 <p>
 <img src="lre.png" class="projpic">
-<a href="http://lre.baulab.info/">Linearity of Relation Decoding in Transformer LMs</a>
+<a href="http://lre.baulab.info/">Linearity of Relation Decoding in Transformer LMs.</a>
  What is the right level of abstraction to use when understanding a huge network?
  While it is natural to examine individual neurons, attention heads, modules, and
  representation vectors, we should also ask whether taking a holistic view of
