--- a/src/index.html
+++ b/src/index.html
@@ -490,7 +490,7 @@ Prof. Arvind Satyanarayan
  representation vectors, we should also ask whether taking a holistic view of
  a larger part of the network can reveal any higher-level structure. In this work,
  we ask how relationships between entities and their attributes are represented,
- and we measure power of the <em>Jacobian</em>&mdash;the matrix derivative&mdash;to
+ and we measure the power of the <em>Jacobian</em>&mdash;the matrix derivative&mdash;to
  capture the action of a range of transformer layers in applying a relation to an entity.
 <span class="more"></span>
 <span class="extra">
