--- a/src/index.html
+++ b/src/index.html
@@ -263,6 +263,8 @@ Want to come to Boston to work on deep learning with me?
   >contact me</a> if you are interested in joining as a graduate
 student or postdoc.
 
+<p><mark>May 14 2024</mark> <a href="https://www.nature.com/articles/d41586-024-01314-y">This news feature at Nature</a> discusses some of the research in our lab and in our area.
+
 <p>
 <a href="publications.html">Publication List</a>. (PNAS; NeurIPS; ICLR; TPAMI; CVPR; SIGGRAPH; ECCV; ICCV.)
 <br>
