--- a/src/index.html
+++ b/src/index.html
@@ -487,8 +487,8 @@ Prof. Arvind Satyanarayan
 <p>
 <a href="https://www.nature.com/articles/d41586-024-01314-y"
    ><img src="nature-think.jpg" class="projpic"
-   >How does ChatGPT think?</a> Nature news feature by Matthew Hutson,
-   May 14, 2024. 
+   >How does ChatGPT think?</a> <strong>Nature</strong> news feature by
+   Matthew Hutson, May 14, 2024. 
    Researchers are striving to reverse-engineer artificial intelligence
    and scan the 'brains' of LLMs to see what they are doing, how and why...
    Explainable AI tools are being devised to explain the workings of LLMs.
